Fix wrapping on single node graphs page
The stylus selector for the header was broken, so "clear:both" wasn't
being applied to the section header.

--- a/ui/styl/partials/layout.styl
+++ b/ui/styl/partials/layout.styl
@@ -264,16 +264,20 @@ a.toggle
   &.healthy
     color $main-green
 
-.section.charts
-  h2
-    clear both
-    padding-top 15px
-
-    &:first-child
-      padding-top 0
-
+.section.overview
   .charts
     width $chart-width
+
+.section.node
+  .charts
+    width $chart-width
+
+    h2
+      clear both
+      padding-top 15px
+
+      &:first-child
+        padding-top 0
 
 .banner
   width 100%
